--- a/public/main.css
+++ b/public/main.css
@@ -1,10 +1,13 @@
 body {
   background-color: teal;
+  font-family: arial;
 }
 
 main{
   width: 500px;
   margin: 0 auto;
+  font-family: verdana;
+  font-size: 15px;
 }
 
 input{
